[package]
name = "zero-claw"
version = "0.2.1"
edition = "2021"
description = "The absolute core. A minimal Rust agent runtime."
license = "MIT"
repository = "https://github.com/paean-ai/0claw"
homepage = "https://0.works"
readme = "README.md"
keywords = ["agent", "llm", "mcp", "ai", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "0claw"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "process", "sync", "time"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
anyhow = "1"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
